# chatbot-mongodb

./: .env.example  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yaml  makefile  pyproject.toml  pytest.ini  run_tests.sh
app/: app.py  db.py  insurance_agent.py  models.py  service_exceptions.py  sessions.py
app/config/: config.py  config.yaml
tests/: conftest.py  test_app.py  test_e2e.py  test_sessions.py
